[package]
name = "leifsbu"
version = "0.1.0"
authors = ["Terje Schjelderup <terjesc@pvv.org>"]
edition = "2018"
description = "Minecraft settlement generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
image = "0.23.14"
imageproc = "0.22.0"
log = "0.4"
mcprogedit = { path = "../mcprogedit" }
num-integer = "0.1"
pathfinding = "2.1.4"
rand = "0.8.5"
simple_logger = { version = "2.1", default-features = false, features = ["stderr"] }

[features]
debug_images = []
